editing schedule bug fixed